amf-client/shared/src/test/resources/parser-results/raml/error/chained/api.raml
#%RAML 1.0
uses:
  lib1: lib1.raml

title: invalid
types:
  C:
    properties:
      c: lib1.lib2.A